[gd_scene load_steps=7 format=3 uid="uid://g50wfi8uk4ch"]

[ext_resource type="Script" path="res://game_over_menu.gd" id="1_rtca0"]
[ext_resource type="Texture2D" uid="uid://cao44k0lrsftp" path="res://images/victory.png" id="2_jxqj8"]

[sub_resource type="Animation" id="Animation_jqidt"]
length = 0.001

[sub_resource type="Animation" id="Animation_ueogs"]
resource_name = "rotate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.00138778, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.268, 0.268), Vector2(1.5, 1.5), Vector2(0.268, 0.268)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0138778, 0.996425),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6d7ba"]
_data = {
"RESET": SubResource("Animation_jqidt"),
"rotate": SubResource("Animation_ueogs")
}

[sub_resource type="SystemFont" id="SystemFont_jjqke"]
subpixel_positioning = 0

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtca0")

[node name="VictoryCup" type="Sprite2D" parent="."]
position = Vector2(864, 148.875)
rotation = 0.771071
scale = Vector2(0.610215, 0.610215)
texture = ExtResource("2_jxqj8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="VictoryCup"]
libraries = {
"": SubResource("AnimationLibrary_6d7ba")
}
autoplay = "rotate"
speed_scale = 0.662

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Game over!"

[node name="PlayerLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Placeholder"

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_jjqke")
theme_override_font_sizes/font_size = 24
text = "Segmentation fault (core dumped)"

[node name="RestartButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="QuitButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
